--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,10 @@
   padding: 32px !important;
 }
 
+.mb-2 {
+  margin-bottom: 16px !important;
+}
+
 .mb-3 {
   margin-bottom: 24px !important;
 }
@@ -68,9 +72,12 @@
   margin-left: 16px !important;
 }
 
-.header-container {
+.mt-2 {
+  margin-top: 16px !important;
+}
+
+.mt-4 {
   margin-top: 32px !important;
-  margin-bottom: 32px;
 }
 
 .w-100 {
